fixed navbar minimum height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 }
 
 #navbar {
-  height: 130px;
   background-color: white; 
   color: black;
   position: fixed; 
@@ -17,7 +16,6 @@ body {
   font-size: 1.15vw;
   font-family: 'Averia Serif Libre', serif;
   width: 100%; 
-  transition: height 0.5s; /* Include width in transition */
 }
 
 #navbar-notstatic{
@@ -480,7 +478,9 @@ footer li {
 @media (min-width: 768px) and (max-width: 991px) {
     /* Styles for laptops and small desktops */
     #navbar {
+      height: 130px;
       font-size: 1.8vw;
+      transition: height 0.5s; /* Include width in transition */
     }
     #navbar-static {
       font-size: 1.8vw;
@@ -547,7 +547,9 @@ footer li {
 @media (min-width: 992px) and (max-width: 1199px) {
     /* Styles for desktops */
     #navbar {
+      height: 130px;
       font-size: 1.8vw;
+      transition: height 0.5s; /* Include width in transition */
     }
     #navbar-static {
       font-size: 1.8vw;
@@ -585,6 +587,11 @@ footer li {
 
 /* Extra large devices (large desktops) */
 @media (min-width: 1200px) {
+  #navbar {
+    height: 130px;
+    font-size: 1.8vw;
+    transition: height 0.5s; /* Include width in transition */
+  }
     /* Styles for large desktops */
     .navbar-brand {
       position: absolute;
